# minhash-rs

./: .$minhash_diagram.drawio.bkp  .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  MSE benchmarks.ipynb  MinHash Jaccard benchmarks.ipynb  README.md  minhash_diagram.drawio
.github/workflows/: release.yml  rust.yml
benches/: bench_insert.rs  bench_minhash_insert.rs
benchmarks/: plot.py
src/: atomic.rs  from_iter.rs  intersection.rs  lib.rs  lsh.rs  maximal.rs  min.rs  minhash.rs  minhash_array.rs  primitive.rs  splitmix.rs  union.rs  xorshift.rs  zero.rs
tests/: test_atomic.rs  test_atomic_variants.rs  test_jaccard.rs  test_lsh.rs  test_minhash_api.rs  test_minhash_array.rs  test_properties.proptest-regressions  test_properties.rs  test_serde.rs  test_union.rs  test_word_primitives.rs  test_word_types.rs
tests/partial/: partial.md
